--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@react-native-firebase/firestore": "^18.4.0",
     "expo": "^49.0.3",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-searchbar": "^1.16.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6"
